--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "js-cookie": "2.2.0"
+    "js-cookie": "2.2.0",
+    "vue-wechat-title": "2.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
