--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "js-cookie": "2.2.0",
-    "vue-wechat-title": "2.0.5"
+    "vue-wechat-title": "2.0.5",
+    "swiper": "^4.3.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
