--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "js-cookie": "2.2.0",
     "lib-flexible": "^0.3.2",
+    "swiper": "^4.3.3",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "js-cookie": "2.2.0",
     "vue-wechat-title": "2.0.5",
-    "swiper": "^4.3.3"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.2.5",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
