--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vue-wechat-title": "2.0.5",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vue-date-picker": "2.5.0"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.2.5",
