--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue-router": "^3.0.1",
     "vue-wechat-title": "2.0.5",
     "vuex": "^3.0.1",
-    "vue-date-picker": "2.5.0"
+    "vue-date-picker": "2.5.0",
+    "ali-oss": "6.1.1"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.2.5",
